feat: 修正工具图标配置路径格式
- 修正 xiaoyibao 工具图标路径为 /imgs/tools/xiaoyibao.svg
- 修正 clinicalTrials 工具图标路径为 /imgs/tools/clinicalTrials.svg
- 确认 knows 工具图标路径配置正确
- 更新开发日志记录图标配置修正过程
- 构建并复制图标文件到 public/imgs/tools/ 目录

修复了之前使用 plugins/ 格式导致图标无法显示的问题，
现在使用正确的 /imgs/tools/ 路径格式符合 FastGPT 规范。

--- a/modules/tool/packages/knows/开发日志.md
+++ b/modules/tool/packages/knows/开发日志.md
@@ -1,5 +1,81 @@
 # KnowS 插件开发日志
 
+## 2025-01-17 - API Key 安全配置重构
+
+### 🔧 修改内容
+#### 1. 移除默认 API Key，提升安全性
+- **修改文件**: `shared/config.ts`
+- **关键变更**:
+  - 移除 `KNOWS_ENVIRONMENTS` 中的 `defaultApiKey` 字段
+  - 修改 `getKnowsConfig` 函数，将 `apiKey` 参数改为必填
+  - 添加 API Key 验证逻辑，提供清晰的错误提示
+
+#### 2. 为所有子工具添加 API Key 输入配置
+- **修改文件**: 
+  - `children/search/config.ts`
+  - `children/analysis/config.ts`
+  - `children/summary/config.ts`
+  - `children/details/config.ts`
+  - `children/history/config.ts`
+  - `children/management/config.ts`
+- **关键变更**:
+  - 导入 `defineInputConfig` 工具函数
+  - 在每个工具的 `inputs` 数组开头添加 API Key 配置
+  - 使用 `secret` 类型确保密钥安全输入
+
+#### 3. 更新工具实现
+- **修改文件**: `children/search/src/index.ts`
+- **关键变更**:
+  - 将 `InputType` 中的 `apiKey` 改为必填字段
+  - 调整参数解构顺序，优先处理 `apiKey`
+  - 添加 `maxResults` 参数支持
+
+### 🎯 技术要点
+#### API Key 配置模式
+```typescript
+defineInputConfig([
+  {
+    key: 'apiKey',
+    label: 'KnowS API Key',
+    description: 'KnowS 平台的 API 密钥',
+    required: true,
+    inputType: 'secret'  // 确保密钥安全输入
+  }
+])
+```
+
+#### 配置获取方式
+```typescript
+// 现在 apiKey 是必填参数
+const config = getKnowsConfig(apiKey, environment);
+```
+
+#### 错误处理优化
+```typescript
+if (!apiKey) {
+  throw new Error('API Key 是必填项，请在工具配置中输入有效的 KnowS API Key');
+}
+```
+
+### ✅ 安全特性
+1. **无默认密钥**: 完全移除默认 API Key，避免泄露风险
+2. **强制配置**: 用户必须主动输入 API Key 才能使用工具
+3. **密钥保护**: 使用 `secret` 类型确保输入时密钥不可见
+4. **清晰提示**: 提供明确的错误信息指导用户配置
+
+### 🔄 用户体验
+1. **一致性**: 所有子工具都采用相同的 API Key 配置方式
+2. **简单性**: 参考 `bing` 工具的简单直接模式
+3. **安全性**: 每次使用都需要输入 API Key，确保安全
+4. **友好性**: 清晰的标签和描述帮助用户理解配置
+
+### 📝 后续计划
+1. 更新其他子工具的实现代码，确保与新的 API Key 配置兼容
+2. 测试所有工具的 API Key 验证逻辑
+3. 更新用户文档，说明新的配置方式
+
+---
+
 ## 2025-01-17 - API 标准化调整
 
 ### 问题描述
